@startuml
namespace app {

    class app << package >> {
        ~ sanityChecks()
        + Start()
        ~ getDbClient(): *sqlx.DB 
        ~ writeResponse(w http.ResponseWriter, code int, data interface{})
    }

    class AccountHandler << (S,Aquamarine) >> {
        - service service.AccountService

        + NewAccount(w http.ResponseWriter, r *http.Request) 

    }
    class CustomerHandlers << (S,Aquamarine) >> {
        - service service.CustomerService

        - getAllCustomers(w http.ResponseWriter, r *http.Request) 

        + GetCustomer(w http.ResponseWriter, r *http.Request) 

    }
}


namespace domain {
    
    class domain << package >> {
        + NewAccountRespositoryDb(dbClient *sqlx.DB): AccountRespositoryDb 
    }

    interface AccountRepository  {
        + Save( Account) (*Account, *errs.AppError)

    }
    class Account << (S,Aquamarine) >> {
        + AccountId string
        + CustomerId string
        + OpenDate string
        + AccountType string
        + Amount string
        + Status string

        + ToNewAccountResponseDto() dto.NewAccountResponse

    }
    class AccountRespositoryDb << (S,Aquamarine) >> {
        - client *sqlx.DB

        + Save(a Account) (*Account, *errs.AppError)

    }
    class Customer << (S,Aquamarine) >> {
        + Id string
        + Name string
        + City string
        + Zipcode string
        + DateOfBirth string
        + Status string

        - statusAsText() string

        + ToDto() dto.CustomerResponse

    }
    interface CustomerRepository  {
        + FindAll(status string) ([]Customer, *errs.AppError)
        + ById( string) (*Customer, *errs.AppError)

    }
    class CustomerRepositoryDb << (S,Aquamarine) >> {
        - client *sqlx.DB

        + FindAll(status string) ([]Customer, *errs.AppError)
        + ById(id string) (*Customer, *errs.AppError)

    }
    class CustomerRepositoryStub << (S,Aquamarine) >> {
        - customers []Customer

        + FindAll() ([]Customer, error)

    }
}

"domain.AccountRepository" <|-- "domain.AccountRespositoryDb"
"domain.CustomerRepository" <|-- "domain.CustomerRepositoryDb"

namespace dto {
    class CustomerResponse << (S,Aquamarine) >> {
        + Id string
        + Name string
        + City string
        + Zipcode string
        + DateOfBirth string
        + Status string

    }
    class NewAccountRequest << (S,Aquamarine) >> {
        + CustomerId string
        + AccountType string
        + Amount float64

        + Validate() *errs.AppError

    }
    class NewAccountResponse << (S,Aquamarine) >> {
        + AccountId string

    }
}


namespace errs {
    class AppError << (S,Aquamarine) >> {
        + Code int
        + Message string

        + AsMessage() *AppError

    }
}


namespace service {
    interface AccountService  {
        + NewAccount( dto.NewAccountRequest) (*dto.NewAccountResponse, *errs.AppError)

    }
    interface CustomerService  {
        + GetAllCustomer( string) ([]dto.CustomerResponse, *errs.AppError)
        + GetCustomer( string) (*dto.CustomerResponse, *errs.AppError)

    }
    class DefaultAccountService << (S,Aquamarine) >> {
        - repo domain.AccountRepository

        + NewAccount(req dto.NewAccountRequest) (*dto.NewAccountResponse, *errs.AppError)

    }
    class DefaultCustomerService << (S,Aquamarine) >> {
        - repo domain.CustomerRepository

        + GetAllCustomer(status string) ([]dto.CustomerResponse, *errs.AppError)
        + GetCustomer(id string) (*dto.CustomerResponse, *errs.AppError)

    }
}

"service.AccountService" <|-- "service.DefaultAccountService"
"service.CustomerService" <|-- "service.DefaultCustomerService"

@enduml
